# agentscope-agui-scaffold

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py  manifest.py
backend/app/core/: logging.py  model_config.py  settings.py
backend/app/knowledge/: scaffold_knowledge.md
backend/app/observability/: __init__.py  context.py  desensitize.py  enricher.py  middleware.py  plugin.py  schema.py
backend/app/observability/sinks/: __init__.py  base.py  local_jsonl.py  sls_structured.py
backend/app/runtime/: __init__.py  agent_runner.py  agui_runtime.py  confirm_store.py  factory.py
backend/app/tools/: __init__.py  agentscope_tools.py  business.py  registry.py
backend/config/: scaffold.toml
backend/scripts/: patrol_scan.py  patrol_session.py  sls_add_field_index.py
frontend/: .env.example  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: env.ts  main.tsx  styles.css
frontend/src/api/: agentscopeAgui.ts  manifest.ts
frontend/src/app/: App.tsx
frontend/src/components/assistant-ui/: thread-list.tsx  thread.tsx  threadlist-sidebar.tsx
frontend/src/components/tools/: ConfirmToolCard.tsx  DefaultToolResult.tsx  tool-ui-registry.tsx
frontend/src/runtime/: AgentRuntimeProvider.tsx  ManifestProvider.tsx
